create .travis.yml and Procfile

--- a/config/config-prod.json
+++ b/config/config-prod.json
@@ -1,6 +1,6 @@
 {
-  "port": 5000,
-  "domain": "localhost",
+  "port": 8080,
+  "domain": "herokuapp.com",
   "app-static": "./dist",
   "defultUser": {
     "access_token": "123",
