--- a/config/config-prod.json
+++ b/config/config-prod.json
@@ -21,8 +21,8 @@
   "deleteUserNews": false,
   "userHashLength": 15,
   "mongo": {
-    "url": "mongodb://user:password123@ds019482.mlab.com:19482/",
-    "baseName": "hw5-nodejs"
+    "url": "mongodb://user:password123@ds019482.mlab.com:19482/hw5-nodejs",
+    "baseName": ""
   },
   "session": {
     "secret": "$eCret@",
