--- a/config/config-prod.json
+++ b/config/config-prod.json
@@ -24,6 +24,7 @@
     "url": "mongodb://user:password123@ds019482.mlab.com:19482/hw5-nodejs",
     "baseName": ""
   },
+  "mongooseURL": "mongodb://user:password123@ds019482.mlab.com:19482/hw5-nodejs",
   "session": {
     "secret": "$eCret@",
     "key": "keys",
