--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "app:dev": "set NODE_ENV=development && nodemon --ignore sessions/ app.js",
     "app": "set NODE_ENV=development && node --inspect app"
   },
-  "description": "Enterprise system \"UndefinedSystems\"",
+  "description": "Enterprise system \"UndefinedSystem\"",
   "author": "Vyacheslav Knyazev",
   "dependencies": {
     "connect-flash": "^0.1.1",
@@ -29,5 +29,9 @@
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^5.2.0"
+  }
 }
